--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ production_url:     https://jack1c.github.io/           # production_url是sitem
 # url_tags必须和tags.md中的permalink定义相同，这样定义的原因是不希望permalink中包含文件类型后缀。
 # 或者tags.md中不定义permalink，这里直接引用tags.md的在目录中的绝对地址。
 # 其它几个url也需要遵循这个原则。
-# 
+#
 url_rss:            /pages/atom.xml
 url_about:          /pages/about.html
 url_archives:       /pages/archive.html
 url_atom:           /pages/atom.html
-url_tags:	    /pages/tags.html
+url_tags:	        /pages/tags.html
 
 # gavatar头像及Favicon
 favicon:            /assets/img/favicon.ico
@@ -48,11 +48,11 @@ active: Linux
 
 
 # 首页除了最新文章外显示分类
-cates: 
+cates:
   - Java
   - Linux
   - d2l
-  - GO
+  - Golang
 
 
 # 中文本地化
@@ -62,9 +62,9 @@ locals:
   newest: "最新文章"
   archive: "# 归档"
 
-  
+
 # Background image to be tiled on all pages
-background: 
+background:
 
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
@@ -80,18 +80,18 @@ paginate_path: "/page:num"
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Shanghai
 future:      true
-          
+
 
 # markdown设置
 # redcarpet extensions 含义参考 https://github.com/vmg/redcarpet
 # 选择它的主要原因是，支持```language```语法，用来标记代码块，不需要缩进4个空格。
 # 另外还支持脚注、文本高亮、删除线等扩展的markdown语法，
 # 需要加入extensions列表才能开启或关闭相应功能。
-# 
+#
 # 表格语法需要特别注意 :-: 中间若有空格，可能不会解析。
 # no_intra_emphasis: do not parse emphasis inside of words 不解析单词间的下划线
-# 
-# 其它可选的markdown: rdiscount, kramdown, 
+#
+# 其它可选的markdown: rdiscount, kramdown,
 #
 # Github 不再支持 redcarpet， 替换为 kramdown
 # https://github.com/planetjekyll/quickrefs/blob/master/FAQ.md#q-how-can-i-get-backtick-fenced-code-blocks-eg--working-with-kramdown
@@ -113,13 +113,13 @@ kramdown:
 # Fixing highlighting errors: pygments not supported.
 
 highlighter: rouge
-    
+
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
-google_verify:      
+google_analytics:
+google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:         
+bing_verify:
 
 
 include: []
